--- a/docs/css/estilos.css
+++ b/docs/css/estilos.css
@@ -662,6 +662,15 @@ body.color-negativo a:link, body.color-negativo a:visited, body.color-negativo a
   height: 20em;
   object-fit: cover;
 }
+  @media screen and (max-width: 800px){
+    .l-series-invencion .grilla__internal > * {
+      margin-left: 20px;
+      margin-top: 20px;
+      width: 100%;
+      height: 20em;
+      object-fit: cover;
+    }
+  }
 
 .l-series-seccion-espaciada {
   margin-top: 60px;
